kubernetes/litmus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litmus
  namespace: litmus
spec:
  ingressClassName: nginx
  rules:
  - host: litmus.apps.mks1-uz.aton.global
    http:
      paths:
      - backend:
          service:
            name: chaos-litmus-frontend-service
            port:
              number: 9091
        path: /
        pathType: Prefix
